# hypercutter

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  pyproject.toml  wasm-pack.toml
.github/workflows/: build.yml  ci.yml  deploy-pages.yml  lint-test.yml  publish-crates.yml  publish-wasm.yml
cli/: __init__.py  __main__.py
data/: pokeemerald.sym
docs/: WASM_JAVASCRIPT.md
docs/source/: api.rst  cli.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: compare.rs  compare_all.rs  gen_symbols.rs
extract_data/: constants.py  extractors.py  utils.py
hypercutter/: __init__.py  classes.py  constants.py  extractors.py  lzss3.py  renderer.py  utils.py
scripts/: dev_server.py  generate_web_constants.py
src/: error.rs  extract.rs  field_effect.rs  graphics.rs  lib.rs  lzss.rs  render.rs  rom.rs  sprite.rs  sprite_pack.rs  symbols.rs  tileset.rs  wasm.rs
src/cli/: __main__.py  mod.rs  sym.rs  write.rs
src/hypercutter/: __init__.py  classes.py  constants.py  exceptions.py  extractors.py  graphics.py  lzss3.py  renderer.py  sprite_renderer.py  types.py  utils.py
src/hypercutter/extractors/: __init__.py  species.py  sprites.py  symbols.py  tilesets.py
symbols/: emerald.toml  firered.toml  firered_rev1.toml  leafgreen.toml  leafgreen_rev1.toml  ruby.toml  ruby_rev1.toml  ruby_rev2.toml  sapphire.toml  sapphire_rev1.toml  sapphire_rev2.toml
tests/: emerald.rs  render_emerald.rs  test_extractors.py  test_renderer.py  test_sprites.py
tests/fixtures/: .gitignore
tests/reference/: .gitignore  README.md
web/: extractor.py  index.html  package.json  pnpm-lock.yaml  pyodide_runner.js  requirements.txt  vite.config.ts
web/public/: extractor.py
web/src/: constants.ts  database.ts  elements.ts  main.ts  pyodide_runner.js  utils.ts
web/src/assets/: extractor.py
web/src/plugins/: dist.ts
