[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "hypercutter"
version = "0.2.1"
description = "GBA Pokemon ROM data extraction tool"
requires-python = ">=3.10"
dependencies = ["Pillow", "tqdm"]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"

[project.scripts]
hypercutter = "cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources",
]

[tool.mypy]
python_version = "3.10"
exclude = ["docs", "web2", "tests", "web", "scripts"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
disable_error_code = ["assignment"]
pretty = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.7",
    "mypy>=1.11.0",
    "types-tqdm>=0.1.0",
]
