[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "hypercutter"
version = "0.2.1"
description = "GBA Pokemon ROM data extraction tool"
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.11.9",
    "Pillow>=9.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
hypercutter = "cli.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
ignore = ["S101", "S108", "S310"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "E501"]
"web/**" = ["S101", "S108", "S110", "I001"]
"scripts/**" = ["S101", "S108"]
"src/hypercutter/classes.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.7",
    "ty>=0.0.54",
]
